# Fast2D

./: .gitignore  Cargo.toml  LICENSE  README.md  SERVO_EXAMPLE_PLAN.md
.cargo/: config.toml
.github/: FUNDING.yml
crates/fast2d/: .gitignore  Cargo.toml
crates/fast2d/src/: backend.rs  backends.rs  canvas_wrapper.rs  fetch_file.rs  lib.rs  object2d.rs  register_fonts.rs
crates/fast2d/src/backend/: backend_blade.rs  backend_canvas.rs  backend_wgpu.rs  backend_wgpu_native.rs
crates/fast2d/src/backend/backend_blade/: canvas_wrapper.rs  color.rs  register_fonts.rs
crates/fast2d/src/backend/backend_canvas/: canvas_wrapper.rs  color.rs  draw.rs  register_fonts.rs
crates/fast2d/src/backend/backend_wgpu/: canvas_wrapper.rs  color.rs  draw.rs  graphics.rs  register_fonts.rs  shaders.wgsl
crates/fast2d/src/backend/backend_wgpu_native/: canvas_wrapper.rs  color.rs  draw.rs  graphics.rs  register_fonts.rs
crates/fast2d/src/backends/: backend_canvas.rs  backend_wgpu.rs  mod.rs
crates/fast2d/src/backends/backend_canvas/: register_fonts.rs
crates/fast2d/src/backends/backend_wgpu/: register_fonts.rs
crates/fast2d/src/object2d/: circle.rs  line.rs  rectangle.rs  text.rs  types.rs
crates/fast2d/src/object2d/text/: family.rs
crates/fast2d/src/object_2d/: circle.rs  line.rs  mod.rs  rectangle.rs  text.rs  types.rs
crates/fast2d/src/shaders/: rectangle.wgsl
examples/blade_browser_example/: .gitignore  CURRENT_STATUS.md  Cargo.toml  IMPLEMENTATION_SPEC.md  Makefile.toml  MoonZoon.toml  README.md  build.sh
examples/blade_browser_example/backend/: Cargo.toml
examples/blade_browser_example/backend/src/: main.rs
examples/blade_browser_example/frontend/: Cargo.toml
examples/blade_browser_example/frontend/src/: main.rs
examples/blade_browser_example/shared/: Cargo.toml
examples/blade_browser_example/shared/src/: lib.rs
examples/blade_example/: Cargo.toml  EXPERIMENT_SUMMARY.md  IMPLEMENTATION_PLAN.md  README.md  TODO.md
examples/blade_example/src/: blade_app.rs  blade_examples.rs  main.rs  rectangle.wgsl  simple_rectangle.wgsl  triangle.wgsl
examples/browser_example/: Dockerfile  Dockerfile_debug  Makefile.toml  MoonZoon.toml  README.md
examples/browser_example/backend/src/: main.rs
examples/browser_example/frontend/: Cargo.toml
examples/cef_example/: CEF_INTEGRATION_COMPLETE.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md
examples/cef_example/frontend/: Cargo.toml
examples/cef_example/src-cef/: Cargo.toml  build.rs
examples/cef_example/src-cef/src/: main.rs
examples/native_tao_example/: COLUMN_LAYOUT_SUCCESS.md  CURRENT_STATUS.md  Cargo.toml  FINAL_SUCCESS.md  FINDINGS.md  IMPLEMENTATION_PLAN.md  README.md  RENDERING_FIXED.md  RESIZE_FIXED.md  RESIZE_FIXES.md  STANDARD_WGPU_RESIZE.md  SUCCESS_SUMMARY.md
examples/native_tao_example/src/: app.rs  canvas_region.rs  examples.rs  graphics.rs  input.rs  layout.rs  main.rs  simple_demo.rs  window.rs
examples/servo_example/: .gitignore  CLAUDE.md  Cargo.toml  Makefile.toml  MoonZoon.toml  README.md  SERVO_INTEGRATION_COMPLETE.md
examples/servo_example/frontend/src/: main.rs
examples/servo_example/src-servo/: Cargo.toml  build.rs  demo-Cargo.toml
examples/servo_example/src-servo/src/: demo.rs  main.rs
examples/tauri_cef_example/: .gitignore  CEF_INTEGRATION_COMPLETE.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md
examples/tauri_cef_example/frontend/pkg/: build_id
examples/tauri_cef_example/src/: main.rs
examples/tauri_cef_example/src-cef/: Cargo.toml  build.rs
examples/tauri_cef_example/src-cef/src/: main.rs
examples/tauri_example/: .gitignore  Cargo.toml  Makefile.toml  README.md
examples/tauri_example/src-tauri/: Cargo.toml  tauri.conf.json
web_example/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_debug  Makefile.toml  MoonZoon.toml  README.md
web_example/backend/src/: main.rs  style.css
web_example/frontend/: Cargo.toml
web_example/frontend/src/: hello_triangle.rs  hello_world.rs  main.rs  rust_logo.rs
