[workspace]
resolver = "3"
members = [
    "frontend",
    "backend",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# zoon = { path = "../../MoonZoon/crates/zoon" }
# moon = { path = "../../MoonZoon/crates/moon" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "d3333db9ebe52c49117858927df5c73f9d9b2dae" }
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "d3333db9ebe52c49117858927df5c73f9d9b2dae" }
