[package]
name = "fast2d"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/FastWaveViewer/Fast2D"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Draw shapes and text using Canvas Web API or wgpu"
categories = ["Graphics"]
license = "MIT"
readme = "../../README.md"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
wgpu = { version = "25.0.0", features = ["wgsl"], default-features = false }
glyphon = { version = "0.9.0", default-features = false }
lyon = { git = "https://github.com/nical/lyon", rev = "8f71592f51ad2c78237e827ec5b824744e9d3de4", default-features = false }
bytemuck = { version = "*", features = ["derive"], default-features = false }
euclid = { version = "*", features = ["bytemuck"], default-features = false }
web-sys = { version = "0.3", features = ["HtmlCanvasElement"], default-features = false }

[features]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]
