[package]
name = "fast2d"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/FastWaveViewer/Fast2D"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Draw shapes and text using Canvas Web API or wgpu"
categories = ["Graphics"]
license = "MIT"
readme = "../../README.md"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
cfg-if = "1.0"
wgpu = { version = "25.0.0", features = ["wgsl"], default-features = false, optional = true }
glyphon = { version = "0.9.0", default-features = false, optional = true }
lyon = { git = "https://github.com/nical/lyon", rev = "8f71592f51ad2c78237e827ec5b824744e9d3de4", default-features = false, optional = true }
bytemuck = { version = "*", features = ["derive"], default-features = false, optional = true }
euclid = { version = "*", features = ["bytemuck"], default-features = false, optional = true }
web-sys = { version = "0.3", features = ["console"], default-features = false, optional = true }
ttf-parser = { version = "0.25.1", features = ["std"], default-features = false, optional = true }

[features]
default = []
webgl = [
    "dep:wgpu",
    "wgpu/webgl",
    "dep:glyphon",
    "dep:lyon",
    "dep:bytemuck",
    "dep:euclid",
    "dep:web-sys",
    "web-sys/HtmlCanvasElement",
]
webgpu = [
    "dep:wgpu",
    "wgpu/webgpu",
    "dep:glyphon",
    "dep:lyon",
    "dep:bytemuck",
    "dep:euclid",
    "dep:web-sys",
    "web-sys/HtmlCanvasElement",
]
canvas = [
    "dep:web-sys",
    "web-sys/CanvasRenderingContext2d",
    "web-sys/Document",
    "web-sys/Element",
    "web-sys/HtmlCanvasElement",
    "web-sys/Window",
    "web-sys/TextMetrics", # <-- enable TextMetrics for text measurement
    "dep:ttf-parser",
]
