[package]
name = "fast2d"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/FastWaveViewer/Fast2D"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Draw shapes and text using Canvas Web API or wgpu"
categories = ["Graphics"]
license = "MIT"
readme = "../../README.md"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[dependencies]
# Core dependencies
cfg-if = { version = "1.0" }
wasm-bindgen-futures = { version = "0.4.50", features = ["std"], default-features = false, optional = true }

# Canvas feature dependencies
ttf-parser = { version = "0.25.1", features = ["std"], default-features = false, optional = true }
web-sys = { version = "0.3", default-features = false, optional = true, features = [
    "console",
    "Response",
]}

# WebGL/WebGPU feature dependencies
bytemuck = { version = "*", features = ["derive"], default-features = false, optional = true }
euclid = { version = "*", features = ["bytemuck"], default-features = false, optional = true }
glyphon = { version = "0.9.0", default-features = false, optional = true }
lyon = { git = "https://github.com/nical/lyon", rev = "8f71592f51ad2c78237e827ec5b824744e9d3de4", default-features = false, optional = true }
wgpu = { version = "25.0.0", features = ["wgsl"], default-features = false, optional = true }

# Native feature dependencies
raw-window-handle = { version = "0.6", optional = true }

[features]
default = []

# Web backends (existing)
webgl = [
    "web",
    "dep:wgpu",
    "wgpu/webgl",
    "dep:glyphon",
    "dep:lyon",
    "dep:bytemuck",
    "dep:euclid",
]
webgpu = [
    "web",
    "dep:wgpu",
    "wgpu/webgpu", 
    "dep:glyphon",
    "dep:lyon",
    "dep:bytemuck",
    "dep:euclid",
]
canvas = [
    "web",
    "dep:ttf-parser",
]

# Native backend (new)
native = [
    "dep:wgpu",
    "wgpu/vulkan",
    "wgpu/dx12", 
    "wgpu/metal",
    "dep:glyphon",
    "dep:lyon",
    "dep:bytemuck",
    "dep:euclid",
    "dep:raw-window-handle",
]

# Internal feature groupings
web = [
    "dep:web-sys",
    "dep:wasm-bindgen-futures",
    "web-sys/HtmlCanvasElement",
    "web-sys/CanvasRenderingContext2d",
    "web-sys/Document",
    "web-sys/Element", 
    "web-sys/Window",
    "web-sys/TextMetrics",
    "web-sys/FontFace",
    "web-sys/FontFaceSet",
    "web-sys/FontFaceDescriptors",
    "web-sys/Response",
]
