[package]
name = "native_tao_example"
version = "0.1.0"
edition = "2021"
description = "Native desktop Fast2D example using Tao windowing"
license = "MIT"

[dependencies]
# Windowing
tao = "0.33.0"

# Graphics  
wgpu = "25.0.2"
fast2d = { path = "../../crates/fast2d", features = ["native"], default-features = false }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
bytemuck = "1.14"
cfg-if = "1.0"

# Math
glam = "0.24"

[dev-dependencies]
# Testing
tokio-test = "0.4"
image = "0.24"
criterion = "0.5"

[features]
default = []
debug-graphics = []
profiling = []

[[bin]]
name = "native_tao_example"
path = "src/main.rs"