[workspace]
resolver = "3"
members = [
    "frontend",
    "backend",
    "shared",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# zoon = { path = "../../MoonZoon/crates/zoon" }
# moon = { path = "../../MoonZoon/crates/moon" }
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "507832338c442ee5e7d19b1aa4fc49d7034d5ed0" }
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "507832338c442ee5e7d19b1aa4fc49d7034d5ed0" }
