[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
zoon.workspace = true
# @TODO replace `webgl` with `webgpu` once all relevant browsers and WebViews support WebGPU 
# Related: https://github.com/gfx-rs/wgpu/issues/1464
fast2d = { path = "../../crates/fast2d", features = ["webgpu"] }
