[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
zoon.workspace = true
fast2d = { path = "../../crates/fast2d", default-features = false }

[features]
# Change this line to switch the fast2d rendering API.
# default = ["webgl"] 
# default = ["webgpu"] 
default = ["canvas"]

webgl = ["fast2d/webgl"]
webgpu = ["fast2d/webgpu"]
canvas = ["fast2d/canvas"]
