[package]
name = "cef_example"
version = "0.1.0"
edition = "2021"
description = "Fast2D example using CEF (Chromium Embedded Framework) for reliable WebGL"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for checking MoonZoon server
reqwest = { version = "0.12", features = ["json"] }

# CEF (Chromium Embedded Framework) bindings
cef = { path = "/home/martinkavik/repos/cef-rs/cef" }

[build-dependencies]
# For platform-specific builds
cc = "1.0"

# CEF binary download utility
download-cef = { path = "/home/martinkavik/repos/cef-rs/download-cef" }

[[bin]]
name = "cef_example"
path = "src/main.rs"