[package]
name = "cef_example"
version.workspace = true
edition.workspace = true
description = "Fast2D example using CEF (Chromium Embedded Framework) for reliable WebGL"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for checking MoonZoon server
reqwest = { version = "0.12", features = ["json"] }

# CEF (Chromium Embedded Framework) bindings
cef = { git = "https://github.com/MartinKavik/cef-rs", rev = "1cab9177008c1faab081dc0f31c0f36260a4ca17" }

[build-dependencies]
# For platform-specific builds
cc = "1.0"

# CEF binary download utility
download-cef = { git = "https://github.com/MartinKavik/cef-rs", rev = "1cab9177008c1faab081dc0f31c0f36260a4ca17" }

[[bin]]
name = "cef_example"
path = "src/main.rs"