[workspace]

[package]
name = "servo_example"
version = "0.1.0"
edition = "2021"
description = "Fast2D example using Servo for experimental WebGL/WebGPU graphics"

[dependencies]
# Async runtime for server health checks
tokio = { version = "1.0", features = ["full"] }

# HTTP client for checking MoonZoon server
reqwest = { version = "0.12", features = ["json"] }

# Window management and OpenGL context
winit = "0.30"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.6"

# Servo embedding - Using the NEW 2025 delegate-based API!
libservo = { path = "../servo-build/components/servo", features = ["webdriver", "js_backtrace", "tracing"] }
embedder_traits = { path = "../servo-build/components/shared/embedder" }
ipc-channel = "0.19"
webrender_api = { git = "https://github.com/servo/webrender", branch = "0.67" }
euclid = "0.22"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
tracing = "0.1"

# For cross-thread communication
crossbeam-channel = "0.5"

# OpenGL bindings
gl = "0.14"

# URL handling
url = "2.0"

# Logging
log = "0.4"
env_logger = "0.10"

[build-dependencies]
# For platform-specific builds
cc = "1.0"

[[bin]]
name = "servo_example"
path = "src/main.rs"