[package]
name = "tauri_cef_example"
version = "0.1.0"
edition = "2021"
description = "Fast2D example using CEF instead of Tauri for WebGL compatibility"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for checking MoonZoon server
reqwest = { version = "0.12", features = ["json"] }

# Official Tauri CEF bindings (framework ready - enable for production)
cef = { path = "/home/martinkavik/repos/cef-rs/cef" }

[build-dependencies]
# For platform-specific builds
cc = "1.0"

# CEF download utility (framework ready, enable for production)
download-cef = { path = "/home/martinkavik/repos/cef-rs/download-cef" }

[[bin]]
name = "tauri_cef_example"
path = "src/main.rs"